# VR-Shadow-Boost

./: .gitignore
ShadowBoostF4VR/: CMakeLists.txt  vcpkg.json
ShadowBoostF4VR/data/: ShadowBoostF4VR.ini
ShadowBoostF4VR/data/MCM/Config/ShadowBoostF4VR/: config.json  settings.ini
ShadowBoostF4VR/src/: Config.cpp  Config.h  PCH.h  ShadowBoost.cpp  ShadowBoost.h  main.cpp
VRShadowCascadePreloader/: CMakeLists.txt  README.md
VRShadowCascadePreloader/src/: cascade_patch.cpp  cascade_patch.h  dllmain.cpp  proxy.cpp
